<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/tvfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFirst"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/sa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:onClick="TwoActivity"
        android:text="@string/btnGoSecond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menufirst"
        app:layout_constraintStart_toStartOf="@+id/menufirst" />

    <Button
        android:id="@+id/menufirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="MenuOne"
        android:text="@string/btnFirstBack"
        app:layout_constraintBottom_toTopOf="@+id/sa"
        app:layout_constraintEnd_toEndOf="@+id/tvfirst"
        app:layout_constraintStart_toStartOf="@+id/tvfirst"
        app:layout_constraintTop_toBottomOf="@+id/tvfirst"
        app:layout_constraintVertical_bias="0.693" />
</androidx.constraintlayout.widget.ConstraintLayout>